asm_tests/other_testfiles/invalid_files/error54.s
.name "MORO"
.comment "MORJESTA!"

live:live%12live%12
